package Behavioral.Memento.Interface;

public interface Memento {
    public int getHeight();
    public int getWidth();
}
